# walking-experiment-2512

./: .gitignore  .mcp.json  README.md  Taskfile.yml  bipartite_clustering.py  generate.py  main.py  map_viewer.html  preview.html  pyproject.toml  visualize_clusters.py
.serena/: project.yml
.serena/memories/: code_layout.md  key_tasks.md  project_overview.md
docs/: data.md
src/walking/: bipartite_clustering.py  generate.py  models.py
