[project]
name = "walking-experiment-2512"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[tool.uv]
package = true

[project.scripts]
generate = "walking.generate:main"
cluster = "walking.bipartite_clustering:main"
visualize = "walking.visualize_clusters:main"

